--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,269 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+}
+body {
+  font-size: 62.5%;
+  font-family: "Open Sans", sans-serif;
+  display: flex;
+  justify-content: center;
+}
+img {
+  width: 90%;
+  height: auto;
+  border-radius: 50%;
+  align-self: center;
+  padding: 6% 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Belgrano", serif;
+  padding: 2%;
+  text-transform: uppercase;
+}
+h1 {
+  font-size: 4.7rem;
+}
+h2 {
+  font-size: 2.1rem;
+}
+h3 {
+  font-size: 1.6rem;
+}
+h4 {
+  font-size: 1.4rem;
+}
+h5 {
+  font-size: 1.2rem;
+}
+p {
+  font-size: 1.1rem;
+  line-height: 1.1rem;
+}
+header {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+header h1,
+header h2 {
+  color: #eff9f2;
+}
+header h2 {
+  font-family: "Open Sans", sans-serif;
+}
+header a:link,
+header a:visited {
+  color: #00242b;
+  text-decoration: none;
+}
+.mainContainer {
+  width: 90%;
+  padding: 4% 0;
+  display: flex;
+  flex-direction: row-reverse;
+}
+.button {
+  background-color: #78a1bb;
+  color: #00242b;
+  text-decoration: none;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.5rem;
+  padding: 2%;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  display: block;
+  margin: 0 auto;
+}
+.rightSide {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 60%;
+  background-color: #eff9f2;
+}
+.rightSide .outerContentBox {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.rightSide header {
+  background-color: #03674f;
+}
+.leftSide {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 40%;
+  background-color: #00242b;
+}
+.leftSide .outerContentBox {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.leftSide h3,
+.leftSide h4 {
+  color: #78a1bb;
+}
+.leftSide h5,
+.leftSide p,
+.leftSide ul,
+.leftSide li {
+  color: #eff9f2;
+}
+.contentBox {
+  padding: 4% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+}
+.social {
+  display: flex;
+  justify-content: space-around;
+}
+.social a:link,
+.social a:visited {
+  color: #78a1bb;
+  text-decoration: none;
+}
+.social a:link i,
+.social a:visited i {
+  font-size: 1.4rem;
+}
